[workspace]
resolver = "2"
members = ["day*"]

[workspace.dependencies]
itertools = "0.13.0"
rayon = "1.8.0"
grid = "0.14.0"
arrayvec = "0.7.4"
num = "0.4.1"
num-traits = "0.2.17"
pathfinding = "4.6.0"
# petgraph = "0.6.4"
# ndarray = "0.15.6"
# ndarray-linalg = "0.16.0"
indicatif = "0.17.7"
criterion = { version = "0.5.1", features = ["html_reports"] }
