[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "day01"
test = false

[dependencies]
runner = { path = "../utils/runner" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
bencher = { path = "../utils/bencher" }

[[bench]]
name = "benchmark"
harness = false
