[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "day17"
test = false

[dependencies]
grid.workspace = true
pathfinding.workspace = true
runner = { path = "../utils/runner" }

[dev-dependencies]
criterion = { workspace = true }
bencher = { path = "../utils/bencher" }

[[bench]]
name = "benchmark"
harness = false
