[package]
name = "day25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "day25"
test = false

[dependencies]
indicatif = { workspace = true, features = ["rayon"] }
itertools.workspace = true
pathfinding.workspace = true
rayon.workspace = true
runner = { path = "../utils/runner" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
